# web_template_Rust

./: Cargo.toml  database.json
src/: code_template.rs  main.rs
